--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,3 +35,17 @@ text-align: center;
 
 color: #FFFFFF;
 }
+.texto3{
+    width: 406px;
+height: 434px;
+left: 47px;
+top: 714px;
+
+font-family: Roboto;
+font-style: normal;
+font-weight: normal;
+font-size: 18px;
+line-height: 21px;
+
+color: #FFFFFF;
+}
