--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,20 @@
+.cronometro{
+    
+    height: 200px;
+    text-align: center;
+    font-size: 60px;
+    padding-top: 40px;
+    border-radius: 20px;
+    border: burlywood 2px solid;
+}
+
+
+
+
+
+
+
+
 .contagem{
    
 width: 456px;
