--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,27 @@
 .cronometro{
+    max-width: 600px;
+    font-size: 20px;
+    background-color: whitesmoke;
+    text-align: center;    
+    border-radius: 10px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); 
+    padding: 30px;   
     
-    height: 200px;
-    text-align: center;
-    font-size: 60px;
-    padding-top: 40px;
-    border-radius: 20px;
-    border: burlywood 2px solid;
 }
+
+.cronometro h5{
+    text-decoration: underline;
+    margin-bottom: 20px;
+}
+
+#demo{
+    text-align: center;
+    
+}
+
+
+
+
 
 .contagem{
    
