--- a/assets/style.css
+++ b/assets/style.css
@@ -28,3 +28,27 @@
       text-align: center;
 
     }
+
+    .texto1 {
+        width: 693px;
+        height: 140px;
+        left: 62px;
+        top: 188px;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 72px;
+        line-height: 84px;
+    }
+
+    .texto2 {
+        width: 707px;
+        height: 50px;
+        left: 62px;
+        top: 344px;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 36px;
+        line-height: 42px;
+    }
