--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,11 @@
 .navbar {
+      
       max-height: 100px;
       padding-left: 30px;
       padding-top: 20px;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    
+
     }
 
     #rowCronometro {
