--- a/assets/style.css
+++ b/assets/style.css
@@ -58,6 +58,6 @@
         line-height: 42px;
     }
 
-     .texto4{
-      text-align: center!important;
+     .texto4 {           
+       text-align: center;
     }
