--- a/assets/style.css
+++ b/assets/style.css
@@ -5,30 +5,28 @@
 
 
 .navbar {
+      max-height: 80px;
+      padding-left: 100px;
+      padding-top: 10px;
       
-      max-height: 100px;
-      padding-left: 30px;
-      padding-top: 20px;
-      box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
-    
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
 
+.navbar img{
+      padding-bottom: 20px;
     }
      
-     .container {
+     .container{
       background-color: #14252F;
       border-radius: 0 0 20px 20px;
-      width: 1500px;
-      height: 1291px;
+      height: 1000px;
     }
 
      #colunaDois{
       padding-top: 30px;
     }
 
-    #rowCronometro {
-      margin-top: 20px;
-      margin-bottom: 50px;
-    }
+    
 
     .cronometro {
       max-width: 600px;
@@ -36,7 +34,7 @@
       background-color: whitesmoke;
       text-align: center;
       border-radius: 10px;
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
       padding: 30px;
 
     }
@@ -148,3 +146,9 @@
     line-height: 50px;
     color: #14252F;
     }
+
+@media only screen and (max-width: 500px) {
+  #formulario{
+    margin: 0;
+  }
+}
