--- a/assets/style.css
+++ b/assets/style.css
@@ -36,6 +36,7 @@
       border-radius: 10px;
       box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
       padding: 30px;
+      margin-bottom: 20px
 
     }
 
