--- a/assets/style.css
+++ b/assets/style.css
@@ -17,6 +17,7 @@
     }
      
      .container{
+      max-width: 1250px;
       background-color: #14252F;
       border-radius: 0 0 20px 20px;
       height: 1000px;
