--- a/assets/style.css
+++ b/assets/style.css
@@ -56,6 +56,8 @@
     }
 
     #formulario {
+      width: 492px;
+      height: 529px;
       background-color: beige;
       padding: 20px 20px 20px 20px;
       border-radius: 10px;
