--- a/assets/style.css
+++ b/assets/style.css
@@ -16,7 +16,7 @@
       padding-bottom: 20px;
     }
      
-     .container{
+     .container-fluid{
       max-width: 1400px;
       background-color: #14252F;
       border-radius: 0 0 20px 20px;
