--- a/assets/style.css
+++ b/assets/style.css
@@ -21,7 +21,7 @@ h1, h2, h3, h4{
       padding-bottom: 20px;
     }
      
-     .container-fluid{
+     .container{
       max-width: 1400px;
       background-color: #14252F;
       border-radius: 0 0 20px 20px;
