--- a/assets/style.css
+++ b/assets/style.css
@@ -165,4 +165,15 @@ h1, h2, h3, h4{
   #formulario{
     margin: 0;
   }
+  .texto4 {
+    
+    
+    left: 923px;
+    top: 452px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 50px;
+    color: #14252F;
+    }
 }
