--- a/assets/style.css
+++ b/assets/style.css
@@ -39,7 +39,7 @@
     .cronometro {
       max-width: 600px;
       font-size: 20px;
-      background-color: whitesmoke;
+      background-color: white;
       text-align: center;
       border-radius: 10px;
       box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
@@ -61,7 +61,7 @@
     #formulario {
      
       
-      background-color: beige;
+      background-color: white;
       padding: 20px 20px 20px 20px;
       border-radius: 10px;
       margin-right: 20px;
