--- a/assets/style.css
+++ b/assets/style.css
@@ -60,7 +60,7 @@
 
     #formulario {
      
-      
+      width:420px;
       background-color: white;
       padding: 20px 20px 20px 20px;
       border-radius: 10px;
