--- a/assets/style.css
+++ b/assets/style.css
@@ -60,11 +60,11 @@
 
     #formulario {
      
-      width:420px;
+      
       background-color: white;
       padding: 20px 20px 20px 20px;
       border-radius: 10px;
-      margin-right: 20px;
+      margin-right: 5px
     }
 
     .texto1 {
