--- a/assets/style.css
+++ b/assets/style.css
@@ -24,7 +24,8 @@
       max-width: 1200px;
       background-color: #14252F;
       border-radius: 0 0 20px 20px;
-      height: 600px;
+      height: auto;
+      margin-bottom: 30px;
     }
 
 #content{
