--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,9 @@ body{
       font-family: 'Roboto', sans-serif;
 
 }
-
+.content{
+margin:0;
+}
 .navbar {
       /* max-width: 1200px; */
       max-height: 80px;
