--- a/assets/style.css
+++ b/assets/style.css
@@ -38,7 +38,7 @@ position: cover;
 
     .cronometro {
       max-width: 600px;
-      font-size: 20px;
+      font-size: 16px;
       background-color: white;
       text-align: center;
       border-radius: 10px;
@@ -59,7 +59,7 @@ position: cover;
     }
 
     #formulario {
-     width: 450px;
+     
       height: 600px;
       background-color: white;
       padding: 20px 20px 20px 20px;
@@ -75,14 +75,15 @@ position: cover;
         top: 188px;
         font-style: normal;
         font-weight: bold;
-        font-size: 40px;
-        line-height: 84px;
+        font-size: 35px;
+        line-height: 75px;
         color: white;
+        padding-left: 60px;
     }
 
     .texto1 h1{
       font-size: 35px;
-      padding-left: 30px;
+      
     }
 
     .texto2 {
@@ -92,38 +93,40 @@ position: cover;
         top: 344px;
         font-style: normal;
         font-weight: bold;
-        font-size: 36px;
-        line-height: 42px;
+        font-size: 30px;
+        line-height: 25x;
         color: #FFFFFF;
         margin-bottom: 50px;
+        padding-left: 60px;
+        margin-top: 0;
     }
 
     .texto2 h2{
-      font-size: 25px;
+      font-size: 28px;
       padding-left: 30px;
     }
 
     .texto3 {
-       
+        padding-left: 60px;
         height: 272px;
         left: 63px;
         top: 418px;
         font-style: normal;
         font-weight: 500;
         font-size: 20px;
-        line-height: 19px;
+        line-height: 25px;
         color: #FFFFFF;
     }
 
     .texto3 p{
-      padding-left: 30px;
+      
       font-size: 18px;
       line-height: 1.5rem;
       justify-content: justify;
     }
 
    .texto4 {
-      text-align: center;
+      margin-left: 20px;
       font-size: 40px;
       padding-bottom: 5px;
       margin-bottom: 18px;
@@ -173,20 +176,73 @@ position: cover;
 
    
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 480px) {
+
+  
+  #menuNav{
+    max-width: 300px;
+  
+  }
+
+  .navbar{
+    padding-top: 8px;
+    box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.25);
+  }
+  .container{
+    height: auto;
+  }
+
+  .colunaUm{
+    height: 1900px;
+  }
+
+  #content{
+    max-height: auto;
+  }
+  
   #formulario{
+    
+    text-align: center;
     margin: 0;
   }
   .texto4 {
-    padding-left: -20px;
+    padding: 10px;
     align-items: center;
     text-align: center;
     left: 923px;
     top: 452px;
     font-style: normal;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 30px;
     line-height: 50px;
     color: #14252F;
+    }
+
+    .texto1{
+      padding: 10px;
+      font-size: 30px;
+      line-height: 30px;
+      height: 80px;
+    }
+
+    .texto2 {
+      padding: 10px;
+      font-size: 16px;
+      margin-bottom: 0;
+    }
+
+    .texto3{
+      padding: 10px;
+    }
+    .texto3 p{
+      line-height: unset;
+      font-size: 15px;
+      padding-left: 0;
+    }
+
+    .texto3 li{
+      font-size: 15px;
+      text-decoration: none;
+      
     }
 }
