--- a/assets/style.css
+++ b/assets/style.css
@@ -223,6 +223,7 @@ position: cover;
       font-size: 30px;
       line-height: 30px;
       height: 80px;
+      margin-bottom: 40px;
     }
 
     .texto2 {
