--- a/assets/style.css
+++ b/assets/style.css
@@ -188,6 +188,14 @@ position: cover;
     padding-top: 8px;
     box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.25);
   }
+      
+  img{
+    width: 170px!important;
+    height: 85px!important;
+    padding-left: 10px;
+    padding-top: 8px;
+    padding-bottom: 5px;
+  }
   .container{
     height: auto;
   }
