--- a/assets/style.css
+++ b/assets/style.css
@@ -15,7 +15,7 @@ position: cover;
       box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
     }
 
-.navbar img{
+    .navbar img{
       padding-bottom: 20px;
     }
      
@@ -25,12 +25,13 @@ position: cover;
       height:944px;
     }
 
-#content{
+    #content{
      padding-top: 30px;
 }
 
      #colunaDois{
       padding-top: 45px;
+      
     }
 
     
@@ -47,14 +48,16 @@ position: cover;
 
     }
 
-    .cronometro h4,h5 {
+    .cronometro h5 {
       text-decoration: underline;
       margin-bottom: 20px;
+      color: red;
     }
 
     #demo {
       text-align: center;
-
+      border: 2px solid red;
+      border-radius: 10px;
     }
 
     #formulario {
@@ -174,34 +177,24 @@ position: cover;
    }
 
    .input {
-    border: 2px solid #8a97d3;
+     background-color: white;
+    border: 2px solid black;
     padding: 15px;
     height: 45px;
     line-height: 45px;
-    color: gray;
+    color: #6DC06F;
     font-size: 18px;
     width: 100%;
     border-radius: 500px;
     margin-bottom: 15px;
+    transition-duration: 0.5s;
     }
-    
-   #botao_live{
-    width: 100%;
-    border-radius: 500px;
-    border: 0;
-    background: #0029FA;
-    font-weight: bold;    
-    font-size: 16px;
-    text-align: center;
-    line-height: 40px;
-    height: 45px;
-    color: white;
-    cursor: pointer;
-    transition: all .2s ease;
-    border: 2px solid transparent;
-   }
+     
+    .input:hover {
+      background-color: #4CAF50;
+      color: white;
+    }
    
-    
     .col-md-6 {
       text-align: center;
       margin: auto;
@@ -223,6 +216,7 @@ position: cover;
     span.copy {
       font-size: 18px;
     }
+
 @media only screen and (max-width: 480px) {
 
   
