--- a/assets/style.css
+++ b/assets/style.css
@@ -176,7 +176,7 @@ position: cover;
     color: #FFFFFF;
    }
 
-   .button  {
+   .btn  {
      background-color: white !important;
     border: 2px solid black !important;
     padding: 15px;
@@ -190,7 +190,7 @@ position: cover;
     transition-duration: 0.5s !important;
     }
      
-    .button:hover {
+    .btn:hover {
       background-color: #4CAF50 !important;
       color: white !important;
     }
