--- a/assets/style.css
+++ b/assets/style.css
@@ -1,11 +1,11 @@
-body{
-      font-family: 'Roboto', sans-serif;
+    body{
+    font-family: 'Roboto', sans-serif;
 
-}
-.container{
-position: cover;
-}
-.navbar {
+    }
+    .container{
+    position: cover;
+    }
+    .navbar {
       /* max-width: 1200px; */
       max-height: 80px;
       padding-left: 100px;
@@ -33,9 +33,7 @@ position: cover;
       padding-top: 50px;
       
     }
-
-    
-
+  
     .cronometro {
       max-width: 600px;
       font-size: 16px;
@@ -48,16 +46,22 @@ position: cover;
 
     }
 
+    .h4, h4 {
+      font-size: 30px;
+    }
     .cronometro h5 {
       text-decoration: underline;
       margin-bottom: 20px;
       color: red;
+      font-size: 25px;
     }
 
     #demo {
+      font-weight: bold;
       text-align: center;
-      border: 2px solid red;
+      border: 1px solid red;
       border-radius: 10px;
+      font-size: 24px;
     }
 
     #formulario {
@@ -248,6 +252,14 @@ position: cover;
       color: gray !important;
     }
 
+    .texto-spam {
+      width: 100%;
+      padding: 5px;
+      color: #222;
+      font-size: 14px;
+      text-align: center;
+    }
+    
 .convidados {
   margin-bottom: -300px;
   display: flex;
@@ -373,29 +385,6 @@ position: cover;
   color: #14252F; 
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 @media only screen and (max-width: 480px) {
 
   
@@ -491,9 +480,6 @@ position: cover;
 
 
   }
-
-
-
 
   .convidado1 .descricao {
 
