--- a/assets/style.css
+++ b/assets/style.css
@@ -143,7 +143,7 @@ position: cover;
       font-size: 45px;
       padding-bottom: 5px;
       margin-bottom: 18px;
-      
+      text-align: center;
       font-weight: bold;
       color: black;
          
