--- a/assets/style.css
+++ b/assets/style.css
@@ -198,8 +198,8 @@ position: cover;
     }
 
 footer .row{
-   margin-right: 0; 
-   margin-left: 0;
+   margin-right: 0!important; 
+   margin-left: 0!important;
 }
 
     address {
