--- a/assets/style.css
+++ b/assets/style.css
@@ -235,6 +235,7 @@ footer .row{
       padding: 2px !important;
       font-weight: bold !important;
       margin: 15px -6px !important;
+      text-align: center;
     }
       
      .button:hover {
