--- a/assets/style.css
+++ b/assets/style.css
@@ -18,7 +18,7 @@ position: cover;
     .navbarRedes{
       padding-right: 20px;
       padding-top: 15px; 
-       
+      width: 10%;
       
     }
 
