--- a/assets/style.css
+++ b/assets/style.css
@@ -70,6 +70,7 @@ position: cover;
       text-align: center;
       border: 2px solid red;
       border-radius: 10px;
+      font-size: 25px;
     }
 
     #formulario {
