--- a/assets/style.css
+++ b/assets/style.css
@@ -55,22 +55,24 @@ position: cover;
       text-align: center;
       border-radius: 10px;
       box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
-      padding: 30px;
+      padding: 50px;
       margin-bottom: 20px
 
     }
 
     .cronometro h5 {
-      text-decoration: underline;
+      margin-top: 10px;
       margin-bottom: 20px;
-      color: red;
+      font-size: 30px;      
+      font-family: 'Orbitron', sans-serif;
     }
 
     #demo {
-      text-align: center;
-      border: 2px solid red;
-      border-radius: 10px;
-      font-size: 25px;
+      text-align: center;      
+      color: black;
+      font-family: 'Orbitron', sans-serif;
+      font-size: 40px;
+      font-weight: bold;
     }
 
     #formulario {
