--- a/assets/style.css
+++ b/assets/style.css
@@ -53,7 +53,8 @@ position: cover;
       border-radius: 10px;
       box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
       padding: 55px;
-      margin-bottom: 20px
+      margin-bottom: 20px;
+      max-width: 450px!important;
 
     }
 
