--- a/assets/style.css
+++ b/assets/style.css
@@ -7,46 +7,33 @@ position: cover;
 }
 
 
-.navbar {
-      
-      max-height: 90px;
-      padding-left: 100px;
-      padding-top: 10px;
-      
-      
-      box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
-    }
+.navbar {      
+max-height: 90px;
+padding-left: 100px;
+padding-top: 10px;           
+box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+}
 
 .navbarRedes{
-      padding-right: 20px;
-      padding-top: 15px; 
-       
-      
-    }
-    
+padding-right: 20px;
+padding-top: 15px;       
+}  
 
-    .navbarRedes img{
-      width: 35px;
-      height: 35px;
-      margin-left: 5px;  
-      
-    }
+.navbarRedes img{
+width: 35px;
+height: 35px;
+margin-left: 5px;        
+}  
 
-    
-     
-     .container{
-      max-width: 100%;
-      background-color: #14252F;
-      height: 800px;
-    }
+.container{
+max-width: 100%;
+background-color: #14252F;
+height: 800px;
+}  
 
-    
-    
-
-     #colunaDois{
-      padding-top: 50px;
-      
-    }
+#colunaDois{
+padding-top: 50px;      
+}
 
     
 
@@ -407,29 +394,6 @@ footer .row{
   color: #14252F; 
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 @media only screen and (max-width: 480px) {
 
   
@@ -542,9 +506,6 @@ footer .row{
 
   }
 
-
-
-
   .convidado1 .descricao {
 
     padding-left: 0;
@@ -646,3 +607,23 @@ footer .row{
     margin-left: -17px;
   }
 }
+  
+.btn:not(:disabled):not(.disabled) {
+  cursor: pointer;
+  background-color: white;
+  border: 1px solid black;
+  color: #6DC06F;
+  width: 100%;
+  border-radius: 400px;
+  transition-duration: 0.5s;
+  text-align: center;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 30px;
+  height: 40px;
+}
+
+ .btn:not(:disabled):not(.disabled):hover {
+   background-color: #4CAF50 !important;
+   color: white !important;
+ }
