--- a/assets/style.css
+++ b/assets/style.css
@@ -37,18 +37,16 @@ padding-top: 50px;
 
     
 
-    .cronometro {
-      
-      max-width: 500px;
-      font-size: 18px;
-      background-color: white;
-      text-align: center;
-      border-radius: 10px;
-      box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
-      padding: 50px;
-      margin-bottom: 20px
-
-    }
+.cronometro {
+  max-width: 500px;
+  font-size: 18px;
+  background-color: white;
+  text-align: center;
+  border-radius: 10px;
+  box-shadow: inset -10px -12px 12px 0px rgba(0, 0, 0, 0.25);
+  padding: 20px;
+  margin-bottom: 20px;
+}
 
     .cronometro h5 {
       margin-top: 10px;
@@ -65,6 +63,10 @@ padding-top: 50px;
       font-weight: bold;
     }
 
+    div#formulario {
+      margin-right: 20px;
+  }
+  
     #formulario {
      
      height: 500px;
@@ -73,6 +75,7 @@ padding-top: 50px;
       border-radius: 10px;
       margin-right: 5px;
       margin-left: 60px;
+      box-shadow: inset -10px -12px 12px 0px rgba(0, 0, 0, 0.25);
     }
 
     .texto1 {
