--- a/assets/style.css
+++ b/assets/style.css
@@ -78,6 +78,14 @@ padding-top: 50px;
       box-shadow: inset -10px -12px 12px 0px rgba(0, 0, 0, 0.25);
     }
 
+    .modal-header {
+      display: flex;
+      padding: 10px 10px 10px 175px;
+      border-bottom: 2px solid #6DC06F;
+      border-top-left-radius: 0.3rem;
+      border-top-right-radius: .3rem;
+  }
+  
     .texto1 {
       height: 140px;
       left: 62px;
@@ -449,11 +457,8 @@ div#content {
     padding-bottom: -300px;
 
 
-  }
-
-  div#content {
-    margin-top: 140px !important;
-  }
+  } 
+  
   
   #formulario{
     
