--- a/assets/style.css
+++ b/assets/style.css
@@ -80,11 +80,18 @@ padding-top: 50px;
 
     .modal-header {
       display: flex;
-      padding: 10px 10px 10px 190px;
+      padding: 10px 10px 10px 205px;
       border-bottom: 2px solid #6DC06F;
       border-top-left-radius: 0.3rem;
       border-top-right-radius: .3rem;
   }
+  .modal-footer {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 1rem;
+    border-top: 2px solid #6DC06F;
+}
 
     .texto1 {
       height: 140px;
@@ -233,7 +240,7 @@ footer .row{
       height: 45px !important;
       line-height: 40px !important;
       color: #6DC06F !important;
-      font-size: 18px !important;
+      font-size: 36px !important;
       width: 100% !important;
       border-radius: 400px !important;
       transition-duration: 0.5s !important;
