--- a/assets/style.css
+++ b/assets/style.css
@@ -652,3 +652,9 @@ div#content {
   color: red;
   text-decoration: underline;
 }
+
+@media screen and (min-width: 992px) and (max-width: 1364px) {
+  .texto4 {    
+    font-size: 35px;
+  }
+}
