--- a/assets/style.css
+++ b/assets/style.css
@@ -626,26 +626,25 @@ div#content {
     margin-left: -17px;
   }
 }
-  
 .btn:not(:disabled):not(.disabled) {
-  cursor: pointer;
-  background-color: white;
-  border: 1px solid black;
-  color: #6DC06F;
-  width: 100%;
-  border-radius: 400px;
-  transition-duration: 0.5s;
-  text-align: center;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 30px;
-  height: 40px;
+  cursor: pointer !important;
+  background-color: white !important;
+  border: 1px solid black !important;
+  color: #6DC06F !important;
+  width: 100% !important;
+  border-radius: 400px !important;
+  transition-duration: 0.5s !important;
+  text-align: center !important;
+  font-weight: bold !important;
+  font-size: 18px !important;
+  line-height: 30px !important;
+  height: 40px !important;
 }
 
  .btn:not(:disabled):not(.disabled):hover {
    background-color: #4CAF50 !important;
    color: white !important;
- }
+ } 
 
  .h6, h6 {
   font-size: 1.5rem;
