--- a/assets/style.css
+++ b/assets/style.css
@@ -466,7 +466,15 @@ div#content {
     padding-bottom: -300px;
 
 
-  } 
+  }
+      
+  .cronometro{
+    max-width: 400px!important;
+    margin-right: 0!important;
+    margin-left: -14px;
+    
+    
+  }
   
   
   #formulario{
