--- a/assets/style.css
+++ b/assets/style.css
@@ -2,10 +2,6 @@ body{
       font-family: 'Roboto', sans-serif;
 
 }
-.container{
-position: cover;
-}
-
 
 .navbar {      
 max-height: 90px;
@@ -61,8 +57,7 @@ padding-top: 50px;
       text-align: center;      
       color: black;
       font-family: 'Orbitron', sans-serif;
-      
-      font-weight: bold;
+      -webkit-text-stroke-width: thin      
     }
 
     div#formulario {
@@ -384,10 +379,19 @@ footer .row{
   
 }
 
-
+p.nomeConvidado2 {
+  margin-top: 15px;
+  margin-left: 50px;
+}
 
 .convidado3 img{
-  margin-top: 180px;
+  margin-top: 180px;    
+  margin-left: 116px;
+}
+
+p.nomeConvidado3 {
+  margin-left: 156px;
+  margin-top: 20px;
 }
 
 
@@ -680,3 +684,78 @@ div#content {
 }
 
 @media screen and (min-width: 481px) and (max-width: 991px) {
+  .navbar {
+    margin-left: -53px;
+    margin-right: 0;
+    max-height: 90px;
+    padding-left: 100px;
+    padding-top: 10px;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+}
+.row.colunaUm {
+  margin-right: -68px;
+}
+
+.texto1 {
+  height: 140px;
+  left: 62px;
+  margin-top: -75px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 31px;
+  line-height: 75px;
+  color: white;
+  top: 188px;
+  padding-left: 60px;
+}
+
+.texto2 {
+  height: 50px;
+  left: 62px;
+  top: 344px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 25px;
+  color: #FFFFFF;
+  margin-bottom: 41px;
+  padding-left: 60px;
+  margin-top: 37px;
+}
+
+.texto4 {
+  margin-left: 20px;
+  font-size: 33px;
+  padding-bottom: 5px;
+  margin-bottom: 18px;
+  text-align: center;
+  font-weight: bold;
+  color: black;
+}
+
+.cronometro {
+  margin-left: 35px;
+  width: auto;
+  height: 180px;
+  font-size: 18px;
+  background-color: white;
+  text-align: center;
+  border-radius: 10px;
+  padding: 20px;
+  margin-bottom: 20px;
+  margin-top: 185px;
+}
+.container {
+  max-width: 100%;
+  background-color: #14252F;
+  height: 1542px;
+}
+
+
+
+
+
+
+
+
+}
